--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.2",
+    "@types/sharp": "^0.31.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
@@ -21,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "prisma": "^6.18.0"
+    "multer": "^2.0.2",
+    "prisma": "^6.18.0",
+    "sharp": "^0.34.4"
   }
 }
